# pumpfun-clone

./: .env.example  .vercelignore  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
.github/workflows/: bot-launch.yml  managed-board-bot.yml
api/: cron-coin-bot.js  live-board.js  managed-sell.js  toggle-maintenance.js
api/lib/: boardStore.js  market.js  memePool.js
deploy_payload/payload/: 00.b64
program/: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
program/programs/launchpad/: Cargo.toml
program/programs/launchpad/src/: lib.rs
program/scripts/: initialize-global.mjs  test-initialize-auth.mjs  verify-e2e.mjs
program/tests/: launchpad.ts
public/: live-board.json  site-status.json
scripts/: bot-launch.mjs  managed-board-bot.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src/chain/: SolanaProvider.tsx  config.ts  createSplToken.ts  discoverTokens.ts  jupiter.ts  launchpadClient.ts  managedTrade.ts  pay.ts  paymentGateway.ts  tokenChannel.ts
src/components/: BondingProgress.tsx  BottomNav.tsx  BountiesStrip.tsx  Chart.tsx  CommunityFeed.tsx  CookieConsent.tsx  CreateCoinForm.tsx  DexLiveBar.tsx  GraduationToast.tsx  HoldersList.tsx  HowItWorksModal.tsx  JackpotToast.tsx  KingOfHill.tsx  LeftSidebar.tsx  LiveMarketHero.tsx  LiveTradeTape.tsx  MaintenanceGate.tsx  MobileBanner.tsx  Navbar.tsx  ThreadSection.tsx  TickerBar.tsx  TokenBoard.tsx  TokenCard.tsx  TokenImage.tsx  TradePanel.tsx  TradesTable.tsx  WalletModal.tsx
src/engine/: bondingCurve.ts  candles.ts  jackpot.ts  (+5 more)
(+34 files in other folders)
